--- a/beta/css/style.css
+++ b/beta/css/style.css
@@ -72,7 +72,7 @@ header {
     text-align: center;
 }
 /* Style Form */
-input[type=text], select, textarea {
+input[type=text], input[type=date], input[type=number], select, textarea , button{
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -93,6 +93,33 @@ input[type=submit] {
 }
 input[type=submit]:hover {
     background-color: #45a049;
+}
+/* */
+.expanse-container {
+    padding: 25px;
+    border-radius: 5px;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+    min-height: 200px;
+    margin: 100px auto;
+    background: white;
+    border-radius: 5px;
+}
+button {
+    /* width: 100%; */
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+.addMore{
+    border-radius: 50%;
+    padding: 15px;
+    margin: auto;
+    margin-bottom: 15px;
+    width: min-content;
+    display: block;
 }
 /* Media Queries */
 @media only screen and (max-width: 600px ){
