Change responsiv issue.

--- a/beta/css/style.css
+++ b/beta/css/style.css
@@ -134,7 +134,7 @@ th, td {
     width: min-content;
     display: block;
 }
-.responsive {
+img.responsive {
     max-width: 40%;
     height: auto;
 }
