--- a/beta/css/style.css
+++ b/beta/css/style.css
@@ -5,6 +5,7 @@
     --hover-text-color: black;
     --active-bg-color: #4CAF50;
     --active-text-color: white;
+    font-size: 16px;
 }
 *{
     box-sizing: border-box;
@@ -13,6 +14,9 @@
 
 body {
     margin: 0;
+}
+h1 {
+    font-size: 2rem;
 }
 header {
     margin: 0;
@@ -71,12 +75,15 @@ header {
 .center {
     text-align: center;
 }
+
 /* Style Form */
+input {
+    border-radius: 40px;
+}
 input[type=text], input[type=date], input[type=number], select, textarea , button{
     width: 100%;
     padding: 12px;
     border: 2px solid #ccc;
-    border-radius: 4px;
     box-sizing: border-box;
     margin-top: 6px;
     margin-bottom: 16px;
@@ -88,7 +95,6 @@ input[type=submit] {
     color: white;
     padding: 12px 20px;
     border: none;
-    border-radius: 4px;
     cursor: pointer;
 }
 input[type=submit]:hover {
@@ -104,6 +110,10 @@ input[type=submit]:hover {
     margin-top: 100px auto;
     background: white;
     border-radius: 5px;
+}
+.expanse-container label {
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 button {
     /* width: 100%; */
